# campus-burglary-risk-prediction

./: .cache.sqlite  .dockerignore  .gitignore  01_wrangler.py  02_explorer.py  03_model.py  03_modelt.py  CLEANED_GSU_Burglary_Larceny_1mi.csv  DATASET_CARD.md  DATA_GENERATION_PIPELINE.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  config.py  data_dictionary.md  do_this_first.md  docker-compose.yml  dvc.yaml  index.html  requirements.txt  requirements_full.txt
api/: __init__.py  main.py  requirements.txt
app/: app.py  requirements.txt
artifacts/: meta_hourly_npu_lite.json
assets/: style.css
atl_model_pipelines/: README.md
campus_burglary_risk_prediction_v2/: LICENSE  Makefile  README.md  pyproject.toml
campus_burglary_risk_prediction_v2/archive/assets/: index.html
campus_burglary_risk_prediction_v2/campus_burglary_risk_prediction/: __init__.py  dataset.py  features.py
campus_burglary_risk_prediction_v2/docs/: mkdocs.yml
campus_burglary_risk_prediction_v2/dscvenv/: pyvenv.cfg
campus_burglary_risk_prediction_v2/frontend/: package.json
campus_burglary_risk_prediction_v2/frontend/src/pages/: Home.jsx
campus_burglary_risk_prediction_v2/notebooks/: tool_test.ipynb
campus_burglary_risk_prediction_v2/notebooks/scripts_tools/scripts/checkpoint_1/: eda1.1_rw.py  eda1.2_rw.py
campus_burglary_risk_prediction_v2/notebooks/scripts_tools/scripts/checkpoint_2/: eda2.1_hm.py  eda2.1_jp.ipynb  eda2.3_jp.ipynb
campus_burglary_risk_prediction_v2/notebooks/scripts_tools/tools/: converter.py
catboost_info/: catboost_training.json  (+1 more)
(+1009 files in other folders)
