[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "campus_burglary_risk_prediction"
version = "0.0.1"
description = "Predicting burglary risk in Atlanta through machine learning."
authors = [
  { name = "DSCF_Group3" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["campus_burglary_risk_prediction"]
include = ["pyproject.toml", "campus_burglary_risk_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["campus_burglary_risk_prediction"]
force-sort-within-sections = true

